fix: mobile dueno overlay visible

--- a/inulab-client/css/styles.css
+++ b/inulab-client/css/styles.css
@@ -761,3 +761,8 @@ body {
         display: flex !important;
     }
 }
+@media (max-width: 1023px) {
+    .app-content-dueno {
+        overflow: visible !important;
+    }
+}
